- Update markdown help exports for `Get-ADTRunAsActiveUser`.

--- a/docs/Get-ADTRunAsActiveUser.mdx
+++ b/docs/Get-ADTRunAsActiveUser.mdx
@@ -46,7 +46,7 @@ Aliases:
 
 Required: False
 Position: 1
-Default value: (Get-ADTLoggedOnUser)
+Default value: (Get-ADTLoggedOnUser -InformationAction SilentlyContinue)
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
