--- a/docs/Start-ADTMsiProcess.mdx
+++ b/docs/Start-ADTMsiProcess.mdx
@@ -18,8 +18,8 @@ Start-ADTMsiProcess [-Action <String>] -FilePath <String> [-Transforms <String[]
  [-AdditionalArgumentList <String[]>] [-SecureArgumentList] [-Patches <String[]>] [-LoggingOptions <String>]
  [-LogFileName <String>] [-WorkingDirectory <String>] [-SkipMSIAlreadyInstalledCheck]
  [-IncludeUpdatesAndHotfixes] [-NoWait] [-PassThru] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
- [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-RepairFromSource]
- [-ExitOnProcessFailure] [<CommonParameters>]
+ [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-RepairMode <String>]
+ [-RepairFromSource] [-ExitOnProcessFailure] [<CommonParameters>]
 ```
 
 ### ProductCode
@@ -29,8 +29,8 @@ Start-ADTMsiProcess [-Action <String>] -ProductCode <Guid> [-Transforms <String[
  [-AdditionalArgumentList <String[]>] [-SecureArgumentList] [-Patches <String[]>] [-LoggingOptions <String>]
  [-LogFileName <String>] [-WorkingDirectory <String>] [-SkipMSIAlreadyInstalledCheck]
  [-IncludeUpdatesAndHotfixes] [-NoWait] [-PassThru] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
- [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-RepairFromSource]
- [-ExitOnProcessFailure] [<CommonParameters>]
+ [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-RepairMode <String>]
+ [-RepairFromSource] [-ExitOnProcessFailure] [<CommonParameters>]
 ```
 
 ### InstalledApplication
@@ -41,7 +41,8 @@ Start-ADTMsiProcess [-Action <String>] -InstalledApplication <InstalledApplicati
  [-LoggingOptions <String>] [-LogFileName <String>] [-WorkingDirectory <String>]
  [-SkipMSIAlreadyInstalledCheck] [-IncludeUpdatesAndHotfixes] [-NoWait] [-PassThru]
  [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
- [-PriorityClass <ProcessPriorityClass>] [-RepairFromSource] [-ExitOnProcessFailure] [<CommonParameters>]
+ [-PriorityClass <ProcessPriorityClass>] [-RepairMode <String>] [-RepairFromSource] [-ExitOnProcessFailure]
+ [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -429,6 +430,24 @@ Accepted values: Normal, Idle, High, RealTime, BelowNormal, AboveNormal
 Required: False
 Position: Named
 Default value: Normal
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -RepairMode
+
+Specifies the mode of repair.
+Choosing `Repair` will repair via `msiexec.exe /p` (which can trigger unsupressable reboots).
+Choosing `Reinstall` will reinstall by adding `REINSTALL=ALL REINSTALLMODE=omus` to the standard InstallParams.
+
+```yaml
+Type: String
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: Reinstall
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
