--- a/docs/Show-ADTDialogBox.mdx
+++ b/docs/Show-ADTDialogBox.mdx
@@ -13,7 +13,8 @@ Display a custom dialog box with optional title, buttons, icon, and timeout.
 
 ```powershell
 Show-ADTDialogBox [-Text] <String> [-Buttons <MessageBoxButtons>] [-DefaultButton <MessageBoxDefaultButton>]
- [-Icon <MessageBoxIcon>] [-NotTopMost] [-Force] -Title <String> [<CommonParameters>]
+ [-Icon <MessageBoxIcon>] [-NoWait] [-ExitOnTimeout] [-NotTopMost] [-Force] -Title <String>
+ [-Timeout <TimeSpan>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -57,7 +58,7 @@ The button(s) to display on the dialog box.
 Type: MessageBoxButtons
 Parameter Sets: (All)
 Aliases:
-Accepted values: Ok, OkCancel, AbortRetryIgnore, YesNoCancel, YesNo, RetryCancel
+Accepted values: Ok, OkCancel, AbortRetryIgnore, YesNoCancel, YesNo, RetryCancel, CancelTryContinue
 
 Required: False
 Position: Named
@@ -102,6 +103,38 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -NoWait
+
+Presents the dialog in a separate, independent thread so that the main process isn't stalled waiting for a response.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -ExitOnTimeout
+
+Specifies whether to not exit the script if the UI times out.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### -NotTopMost
 
 Specifies whether the message box shouldn't be a system modal message box that appears in a topmost window.
@@ -134,6 +167,22 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -Timeout
+
+Specifies how long to show the message prompt before aborting.
+
+```yaml
+Type: TimeSpan
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### -Title
 
 Title of the message dialog box.
@@ -161,7 +210,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### You cannot pipe objects to this function.
 ## OUTPUTS
 
-### System.String
+### PSADT.UserInterface.Dialogs.MessageBoxResult
 
 ### Returns the text of the button that was clicked.
 ## NOTES
