- Move the `DialogBoxResults` enum into the `DialogResults` namespace.
Even though it's an enum and not an object, it's more right and consistent that it be located here and opens the door for enums for `CloseAppsDialog` also.

--- a/docs/Show-ADTDialogBox.mdx
+++ b/docs/Show-ADTDialogBox.mdx
@@ -210,7 +210,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### You cannot pipe objects to this function.
 ## OUTPUTS
 
-### PSADT.UserInterface.Dialogs.DialogBoxResult
+### PSADT.UserInterface.DialogResults.DialogBoxResult
 
 ### Returns the text of the button that was clicked.
 ## NOTES
